5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1643_2703.log
== TEST (2019-04-13 20:03:08) 
-- CODE:
idade = int(input("digite idade"))
if (num >= 18):
	mensagem = eleitor
else:
	mensagem = nao_eleitor
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (num >= 18):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:03:53) 
-- CODE:
idade = int(input("digite idade"))
if (idade >= 18):
	mensagem = eleitor
else:
	mensagem = nao_eleitor
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:04:54) 
-- CODE:
idade = int(input("digite idade"))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:05:25) 
-- CODE:
idade = int(input("digite idade"))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:54:48) 
-- CODE:
idade = int(input("digite idade"))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:57:00) 
-- CODE:
idade = int(input("digite idade: "))

if (idade >= 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao_eleitor")
	
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:58:24) 
-- CODE:
idade = int(input("digite idade: "))

if (idade >= 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao_eleitor")
	
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 20:58:40) 
-- CODE:
idade = int(input("digite idade: "))

if (idade >= 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao_eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.20985
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
